Day 5
peak efficiency